# Containers_stl

./: .gitignore  .vimspector.json  CMakeLists.txt  Makefile  README.md  compile_flags.txt  s21_array.h  s21_list.h  s21_map.h  s21_queue.h  s21_stack.h  s21_vector.h
includes/: custom_iterator.h  list.h  list.hpp  s21_containers.h
srcs/: list.cc  list.cpp
tests/: CMakeLists.txt
tests/googletest/googletest/include/gtest/internal/: gtest-port.h
tests/includes/: test_list.h  test_list.hpp
tests/srcs/: test_list.cc  test_list.cpp
